# collage-prototypes

./: .gitignore  CLAUDE.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.base.json  turbo.json
prototypes/p1-sustainability/: FINDINGS.md  (+3 more)
research/: 82-final-spike-synthesis.md  83-prototype-designs.md  84-plan-p1-sustainability.md  85-plan-p2-morphology.md  86-plan-p3-network.md  87-plan-p4-fragment.md  88-plan-p5-taxonomy.md
scripts/: proto-autorun.sh  proto-prompt-p1.txt  proto-prompt-p2.txt  proto-prompt-p3.txt  proto-prompt-p4.txt  proto-prompt-p5.txt  test-autorun.sh  test-prompt-p1.txt  test-prompt-p2.txt  test-prompt-p3.txt  test-prompt-p4.txt  test-prompt-p5.txt  worktree-create.sh
shared/python-backend/: pyproject.toml
shared/python-backend/src/collage_backend/: __init__.py  config.py  main.py
shared/python-backend/src/collage_backend/models/: request.py  response.py
shared/python-backend/src/collage_backend/routes/: classify.py  extract.py  fragment.py  heights.py  metrics.py  space_syntax.py  tessellate.py
shared/python-backend/src/collage_backend/services/: __init__.py  classification.py  extraction.py  fragment_ops.py  height_cascade.py  morphometrics.py  space_syntax.py  sustainability.py  tessellation.py
shared/python-backend/src/collage_backend/utils/: crs.py  geometry.py  io.py
shared/python-backend/tests/: conftest.py  test_extraction.py  test_tessellation.py
tests/: p1-sustainability.spec.ts  p2-morphology.spec.ts  p3-network.spec.ts  p4-fragment.spec.ts  p5-taxonomy.spec.ts
(+42 files in other folders)
