[project]
name = "collage-backend"
version = "0.1.0"
description = "Shared FastAPI backend for Collage Earth prototypes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "geopandas>=1.1.0",
    "shapely>=2.0.0",
    "osmnx>=2.1.0",
    "momepy>=0.11.0",
    "cityseer>=4.21.0",
    "scikit-learn>=1.6.0",
    "neatnet>=0.3.0",
    "pyogrio>=0.10.0",
    "pyarrow>=18.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collage_backend"]
